# CPNR_OMEG_colab_60co

./: CMakeLists.txt  Dockerfile  README.md  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MyPhysicsList.hh  PMTHit.hh  PMTSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: analysis_coincidence.py  init_vis.mac  plot_resolution.py  run.mac  run_co60.mac  run_cosmic.mac  run_production.sh  run_single.mac  scan_all.mac  test_45.mac  verify_decay.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MyPhysicsList.cc  PMTHit.cc  PMTHit.hh  PMTSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
